Prevented non-visible element updates; projects map development

--- a/app.css
+++ b/app.css
@@ -9,3 +9,8 @@
 .plotly-notifier {
   display: none;
 }
+
+.leaflet-div-icon {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
